--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ h1.logo a {
 .hero-subtitle {
     font-size: 1.8rem;
     color: var(--color-dark);
-    padding: 1rem;
+    padding: 1rem 2rem;
     background: var(--color-primary);
     position: absolute;
     bottom: 3rem;
@@ -89,23 +89,35 @@ section.main-section h2 {
 section.main-section {
     border-left: .4rem var(--color-secondary) solid;
     min-height: 12rem;
-    margin-left: 20%;
-    margin-top: 4rem;
+    margin: 10rem 12vw 10rem 20%;
     position: relative;
 }
 
 .content {
-    display: flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    padding: 0 12vw 0 5rem;
     color: var(--color-secondary);
 }
 
-.content p {
+.content .bio p {
     font-size: 1.6rem;
     line-height: 2.5rem;
     margin-bottom: 1.6rem;
+    margin-left: auto;
+}
+
+.bio {
+    margin-left: 8rem;
+}
+
+.content.about-me {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+}
+
+#about-me .content #Lewis {
+    border: .6rem solid var(--color-primary);
+    border-radius: 50%;
+    margin-left: 4rem;
 }
 
 .contact-me .links {
@@ -125,19 +137,57 @@ section.main-section {
 }
 
 .cards {
-    justify-content: space-between;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    max-width: 95%;
 }
 
 .card {
+    flex: 1 0 40%;
+    min-height: 20rem;
     border: .6rem solid var(--color-primary);
-    background-position: bottom;
+    background-position: center;
     background-size: cover;
+    margin: 1rem;
+    position: relative;
+}
+
+.card:first-child {
+    flex: 1 0 80%;
+    min-height: 50rem;
+}
+
+.color-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--color-primary);
+    opacity: .3;
+    transition: .3s all ease-out;
+}
+
+.color-overlay:hover {
+    opacity: 0;
+    transition: .3s all ease-out;
 }
 
 .card-title {
     background: var(--color-primary);
-    position: relative;
-    bottom: 0;
+    position: absolute;
+    bottom: 2rem;
+    padding: .5rem 2rem;
+    color: var(--color-dark);
+}
+
+.card-title p {
+    font-size: 1.6rem;
+    line-height: 2.5rem;
+}
+
+.card-title h3 {
+    font-size: 2rem;
 }
 
 #surf-report {
@@ -158,4 +208,66 @@ section.main-section {
 
 #run-buddy {
     background-image: url(../images/run-buddy.jpg);
+}
+
+@media screen and (max-width: 1100px) {
+    section.main-section h2 {
+        position: unset;
+        width: 100%;
+        text-align: left;
+        margin: 0 0 3rem 5rem;
+    }
+
+    section.main-section {
+        margin: 10rem 4vw 10rem 5%;
+        position: relative;
+    }
+
+    .contact-me .links {
+        height: 5rem;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .navigation-bar {
+        background: var(--color-dark);
+        min-height: 12rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding: 0;
+    }
+
+    h1.logo a {
+        font-size: 4rem;
+        font-weight: 600;
+        padding-left: 3rem;
+        padding-right: 3rem;
+        color: var(--color-dark);
+    }
+    
+    .contact-me .links {
+        list-style: none;
+        height: 18rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: unset;
+        padding: 0 0 2rem 5rem;
+    }
+
+    .content.about-me {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: space-around;
+        /* align-items: center; */
+    }
+
+    .bio {
+        margin-top: 3rem;
+        margin-left: 5rem;
+    }
 }
